fix z-index

--- a/src/components/NavegationBar/NavegationBar.css
+++ b/src/components/NavegationBar/NavegationBar.css
@@ -89,7 +89,7 @@
         height: calc(100vh - 60px);
         display: none;
         transition: transform 0.3s ease-out;
-        z-index: 1;
+        z-index: 3;
     }
 
     .nav-links li {
